--- a/src/assets/css/panels/home.css
+++ b/src/assets/css/panels/home.css
@@ -64,11 +64,11 @@
     height: 37px;
     border-radius: 20px;
     border: none;
-    background: #fffb00;
+    background: #A020F0;
     font: normal normal bold 20px/25px Poppins;
     color: #121212;
     margin: 15px 0;
-    box-shadow: 0 0 5px #fffb00;
+    box-shadow: 0 0 5px #A020F0;
 }
 
 .download-content {
@@ -98,7 +98,7 @@
 }
 
 .progress-bar::-webkit-progress-value {
-    background-color: #fffb00;
+    background-color: #A020F0;
     border-radius: 10px;
 }
 
