--- a/src/assets/css/panels/login.css
+++ b/src/assets/css/panels/login.css
@@ -22,27 +22,27 @@
     border: none;
     margin: 2% 0;
     height: 2em;
-    background-color: #fffb00;
-    box-shadow: 0 0 5px #fffb00;
+    background-color: #A020F0;
+    box-shadow: 0 0 5px #A020F0;
     color: #121212;
     font: normal normal bold 19px/29px Poppins;
     cursor: pointer;
 }
 
 .login-type-btn:hover {
-    background-color: #ff7300;
-    box-shadow: 0 0 5px #ff7300;
+    background-color: #c57cf3;
+    box-shadow: 0 0 5px #c57cf3;
 }
 
 .login-type-btn:disabled {
-    background-color: #fffb00;
-    box-shadow: 0 0 5px #fffb00;
+    background-color: #A020F0;
+    box-shadow: 0 0 5px #A020F0;
     cursor: default;
 }
 
 .login-type-btn:disabled:hover {
-    background-color: #fffb00;
-    box-shadow: 0 0 5px #fffb00;
+    background-color: #A020F0;
+    box-shadow: 0 0 5px #A020F0;
 }
 
 .login-card-mojang {
@@ -94,16 +94,16 @@
     border: none;
     margin: 2% 0;
     height: 2em;
-    background-color: #fffb00;
-    box-shadow: 0 0 5px #fffb00;
+    background-color: #A020F0;
+    box-shadow: 0 0 5px #A020F0;
     color: #121212;
     font: normal normal bold 19px/29px Poppins;
     cursor: pointer;
 }
 
 .login-btn:hover {
-    background-color: #ff7300;
-    box-shadow: 0 0 5px #ff7300;
+    background-color: #c57cf3;
+    box-shadow: 0 0 5px #c57cf3;
 }
 
 .cancel {
